Revision history for Perl module Prima

1.71 20XX-XX-XX
 - Add Prima::Image::webp filter dialog
 - Add DeviceBitmap.maskPixel
 - Add menus to file dialogs

1.70 2023-09-03
 - Use fading effects in widgets
 - Solidify emulated 2D transformations with images
   -- Add aperture point for Image.matrix_transform
 - Animation is using core image processing instead of DeviceBitmap
 - Path rendering is optimized for widened arcs and splines
 - Add Widget.is_surface_buffered to check if .buffered(1) was respected
 - Edit.find() changed the coordinate system used, from visual to physical
 - Core Icon.put_image(Icon) will affect the destinations 1-bit mask
 - Image.premultiply_alpha(constant) will work on palettes when bpp <= 8
 - Add Image.to_colormask
 - Add --no-xrender-matrix command line switch for x11 builds

1.69 2023-05-30
 - Fully rewrite win32 socket engine, now is single-threaded
 - Drawable.matrix returns Prima::Matrix objects
 - Speedup x11 matrix image rendering with XRender
 - Use XRender on mac/XQuartz
 - Add a 3D demo
 - Introduce new Widget.skin
 - Flat skin is default now (use Prima::Application skin => 'classic' to revert)
 - Add a mechanism to allow secondary roles to override core methods.
 - Move scrolling and border width properties to a secondary role Widget::GroupScroller
 - Add Component.deepChildLookup to address grand-children by their name same as the direct children

1.68 2023-02-25
 - Process signals inside event loop
 - Add sys::GUIException, onDie, and a standard dialog for user interactions on exceptions
 - Widget.onMouseClick.dblclick::bool is .nth::int now, can report triple, quadruple etc clicks
 - Support fillPattern with tiles in the emulated antialiasing
 - Add Date and Time widgets (and their example/clock.pl)
 - Remove native Win32 support from cygwin builds
 - File.onRead supports native Win32 console stdin event
 - Support XIM input
 - Win32: fix local non-latin months/days of week names in Calendar
 - Win32: fix IME input